--- a/style.less
+++ b/style.less
@@ -1,7 +1,7 @@
 /*
 Theme Name: Olivo Lite
 Theme URI: https://www.quemalabs.com/theme/olivo-lite/
-Description: Portfolio theme
+Description: Olivo Lite is the perfect option for creatives who wants a cutting edge portfolio. For designers or photographers, this themes will make you stand out from the crowd
 Version: 1.0.0
 Author: Quema Labs
 Author URI: https://www.quemalabs.com/
