--- a/style.less
+++ b/style.less
@@ -2,13 +2,17 @@
 Theme Name: Olivo Lite
 Theme URI: https://www.quemalabs.com/theme/olivo-lite/
 Description: Olivo Lite is the perfect option for creatives who wants a cutting edge portfolio. For designers or photographers, this themes will make you stand out from the crowd
-Version: 1.0.1
+Version: 1.0.4
 Author: Quema Labs
 Author URI: https://www.quemalabs.com/
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Tags: portfolio, photography, two-columns, custom-background, threaded-comments, custom-menu, featured-images, sticky-post, translation-ready
 Text Domain: olivo-lite
+
+This theme, like WordPress, is licensed under the GPL.
+
+Olivo Lite, Copyright 2017 quemalabs.com
 */
 /*
 ----------------------------------------------------------------
