--- a/theme-less/_footer.less
+++ b/theme-less/_footer.less
@@ -490,6 +490,14 @@ Social Nav
 .nav_social li a[href*="behance.net"]::before, #menu-social li a[href*="behance.net"]::before { content: "\f1b4"; }
 .nav_social li a[href*="behance.net"]:hover, #menu-social li a[href*="behance.net"]:hover { background-color:#0077ff; }
 
+.nav_social li a[href*="t.me"]::before, #menu-social li a[href*="t.me"]::before { content: "\f2c6"; }
+.nav_social li a[href*="t.me"]:hover, #menu-social li a[href*="t.me"]:hover { background-color:#609dd7; }
+.nav_social li a[href*="telegram.me"]::before, #menu-social li a[href*="telegram.me"]::before { content: "\f2c6"; }
+.nav_social li a[href*="telegram.me"]:hover, #menu-social li a[href*="telegram.me"]:hover { background-color:#609dd7; }
+
+.nav_social li a[href*="mailto:"]::before, #menu-social li a[href*="mailto:"]::before { content: "\f003"; }
+.nav_social li a[href*="mailto:"]:hover, #menu-social li a[href*="mailto:"]:hover { background-color:#4A90E2; }
+
 
 /*
 ==========================================
